--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -99,6 +99,7 @@
       </mat-form-field>
     </div>
     <div class="tournament__submit-container">
+      <button mat-raised-button color="default" (click)="onCancel()">Cancel</button>
       <button mat-raised-button color="primary">Save</button>
     </div>
   </form>
