--- a/src/app/tournament/tournament.component.scss
+++ b/src/app/tournament/tournament.component.scss
@@ -30,5 +30,9 @@
   &__submit-container {
     display: flex;
     justify-content: flex-end;
+
+    button {
+      margin-left: $action-buttons-gap;
+    }
   }
 }
