--- a/src/app/profile/tournaments/tournaments.component.html
+++ b/src/app/profile/tournaments/tournaments.component.html
@@ -6,5 +6,5 @@
 <app-tournament-card
   *ngFor="let tournament of tournaments"
   [tournament]="tournament"
-  [routerLink]="['/tournament', tournament.id, 'view']"
+  [routerLink]="['/tournament', tournament.id, 'view', 'general']"
 ></app-tournament-card>
