--- a/src/app/shared/organisator-form/organisator-form.component.html
+++ b/src/app/shared/organisator-form/organisator-form.component.html
@@ -1,22 +1,34 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <mat-form-field>
-    <input [readonly]="isReadOnly" matInput type="text" placeholder="Organization Name" formControlName="nickname" required>
-    <mat-error *ngIf="isFieldInvalid('nickname')">
-      Please enter orgnaization name!
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field>
-    <input [readonly]="isReadOnly" matInput placeholder="Email" formControlName="email" required>
-    <mat-error *ngIf="isFieldInvalid('email')">
-      Please enter email!
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field *ngIf="!isReadOnly">
-    <input matInput type="password" placeholder="Password" formControlName="password" required>
-    <mat-error *ngIf="isFieldInvalid('password')">
-      Please enter password!
-    </mat-error>
-  </mat-form-field>
+  <div class="organisator-form__field">
+    <mat-form-field>
+      <input [readonly]="isReadOnly" matInput type="text" placeholder="Organization Name" formControlName="nickname">
+      <mat-error *ngIf="isFieldInvalid('nickname', 'required')">
+        {{ validationMessages.requiredError("tournament name") }}
+      </mat-error>
+      <mat-error *ngIf="isFieldInvalid('nickname', 'minlength')">
+        {{ validationMessages.minLengthError("tournament name", 4) }}
+      </mat-error>
+      <mat-error *ngIf="isFieldInvalid('nickname', 'maxlength')">
+        {{ validationMessages.maxLengthError("tournament name", 20) }}
+      </mat-error>
+    </mat-form-field>
+  </div>
+  <div class="organisator-form__field">
+    <mat-form-field>
+      <input [readonly]="isReadOnly" matInput placeholder="Email" formControlName="email">
+      <mat-error *ngIf="isFieldInvalid('email')">
+        Please enter email!
+      </mat-error>
+    </mat-form-field>
+  </div>
+  <div class="organisator-form__field">
+    <mat-form-field *ngIf="!isReadOnly">
+      <input matInput type="password" placeholder="Password" formControlName="password">
+      <mat-error *ngIf="isFieldInvalid('password')">
+        Please enter password!
+      </mat-error>
+    </mat-form-field>
+  </div>
   <div *ngIf="!hideRegisterButton;else updateProfile" class="register__submit-container">
     <button mat-raised-button color="primary">Register</button>
   </div>
