--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -15,6 +15,8 @@ $bot-indent: 1rem;
 $action-buttons-gap: .25rem;
 $page-element-bottom-margin: 1rem;
 
+/* Color legend */
+$color-advancing: $color-accent;
 
 @media screen and (min-width: 600px) {
   $page-indent: 2rem;
