--- a/src/app/tournament/view-tournament/view-tournament.component.html
+++ b/src/app/tournament/view-tournament/view-tournament.component.html
@@ -1,1 +1,12 @@
-<p>view-tournament works!</p>
+<nav mat-tab-nav-bar class="nav">
+  <a
+    *ngFor="let navItem of navItems"
+    mat-tab-link
+    [active]="navItem.routerLink == activeLink"
+    [routerLink]="navItem.routerLink"
+    [class.active]="navItem.routerLink == activeLink"
+  >
+    <mat-icon>{{ navItem.icon }}</mat-icon>
+  </a>
+</nav>
+<router-outlet></router-outlet>
