--- a/src/app/tournament/view-tournament/styles/table.scss
+++ b/src/app/tournament/view-tournament/styles/table.scss
@@ -36,5 +36,12 @@
         color: $color-white;
       }
     }
+
+    tr[data-relegating] {
+      .cdk-column-rowNumber {
+        background-color: $color-relegation;
+        color: $color-white;
+      }
+    }
   }
 }
