--- a/src/app/tournament/view-tournament/tournament-table/tournament-table.component.html
+++ b/src/app/tournament/view-tournament/tournament-table/tournament-table.component.html
@@ -1,3 +1,4 @@
 <div class="tournament-table content-indent">
-  <app-group-table *ngFor="let group of groups" [teams]="group" class="tournament-table__group"></app-group-table>
+  <app-classic-table></app-classic-table>
+  <!-- <app-round-robin-table></app-round-robin-table> -->
 </div>
