--- a/src/app/tournament/view-tournament/classic-table/classic-table.component.html
+++ b/src/app/tournament/view-tournament/classic-table/classic-table.component.html
@@ -1,5 +1,5 @@
-<div class="group-table">
-  <table mat-table [dataSource]="rows" class="mat-elevation-z3">
+<div *ngFor="let group of groups" class="group-table">
+  <table mat-table [dataSource]="group.rows" class="mat-elevation-z3">
     <ng-container matColumnDef="rowNumber">
       <th mat-header-cell *matHeaderCellDef> No. </th>
       <td
@@ -29,7 +29,7 @@
     </ng-container>
 
     <ng-container matColumnDef="groupName">
-      <th mat-header-cell *matHeaderCellDef colspan="5"> Group {{ groupName }} </th>
+      <th mat-header-cell *matHeaderCellDef colspan="5"> Group {{ group.groupName }} </th>
     </ng-container>
 
     <ng-container matColumnDef="disclaimer">
@@ -43,7 +43,7 @@
     <tr
       mat-row
       *matRowDef="let row; columns: displayedColumns; let ii = index;"
-      [attr.data-advancing]="ii < advancingTeams ? '' : null"
+      [attr.data-advancing]="ii < group.advancingTeams ? '' : null"
     ></tr>
     <tr mat-footer-row *matFooterRowDef="['disclaimer']"></tr>
   </table>
