--- a/src/app/tournament/tournament-form/tournament-form.component.html
+++ b/src/app/tournament/tournament-form/tournament-form.component.html
@@ -12,7 +12,7 @@
     <label for="tournamentName">Tournament type</label>
     <mat-form-field>
       <mat-select formControlName="typeId" [compareWith]="compareWithType">
-        <mat-option *ngFor="let type of tournamentTypes" [value]="type">
+        <mat-option *ngFor="let type of tournamentTypes" [value]="type.id">
           {{type.type}}
         </mat-option>
       </mat-select>
