--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -1,4 +1,8 @@
 <div class="tournament content-indent">
   <app-page-header title="Create new tournament"></app-page-header>
-  <app-tournament-form [tournament]="tournament" (onEditCancel)="onEditCancel()"></app-tournament-form>
+  <app-tournament-form
+    [tournament]="tournament"
+    (onEditCancel)="onEditCancel()"
+    (onFormSubmit)="onSubmit($event)"
+  ></app-tournament-form>
 </div>
