--- a/src/app/tournament/view-tournament/general/general.component.html
+++ b/src/app/tournament/view-tournament/general/general.component.html
@@ -4,7 +4,12 @@
     <button *ngIf="canEdit && !isEditing" (click)="editTournament()" mat-raised-button color="accent">Edit</button>
   </div>
   <div class="general__content">
-    <app-tournament-form *ngIf="isEditing" [tournament]="tournament" (onEditCancel)="onEditCancel()"></app-tournament-form>
+    <app-tournament-form
+      *ngIf="isEditing"
+      [tournament]="tournament"
+      (onEditCancel)="onEditCancel()"
+      (onFormSubmit)="onSubmit($event)"
+    ></app-tournament-form>
 
     <div class="general__section" *ngIf="!isEditing">
       <p>General</p>
