--- a/src/app/profile/tournaments/tournaments.component.html
+++ b/src/app/profile/tournaments/tournaments.component.html
@@ -1,10 +1,13 @@
-<div *ngIf="userTypeId == userTypeOrganization" class="add-container">
-  <button routerLink="/tournament" mat-icon-button title="Add new tournament">
-    <mat-icon>add_circle</mat-icon>
-  </button>
+<app-add-item
+  *ngIf="userTypeId == userTypeOrganization"
+  link="/tournament"
+  title="Add new Tournament"
+></app-add-item>
+<div class="content-indent">
+  <app-no-content *ngIf="!tournaments.length" message="Currently you don't have any tournaments"></app-no-content>
+  <app-tournament-card
+    *ngFor="let tournament of tournaments"
+    [tournament]="tournament"
+    [routerLink]="['/tournament', tournament.id, 'view', 'general']"
+  ></app-tournament-card>
 </div>
-<app-tournament-card
-  *ngFor="let tournament of tournaments"
-  [tournament]="tournament"
-  [routerLink]="['/tournament', tournament.id, 'view', 'general']"
-></app-tournament-card>
