--- a/src/app/tournament/view-tournament/tournament-groups/tournament-groups.component.html
+++ b/src/app/tournament/view-tournament/tournament-groups/tournament-groups.component.html
@@ -1,5 +1,8 @@
 <div class="tournament-matches content-indent">
-  <div *ngIf="!tournamentType.id" class="no-matches">
-    <app-no-content [message]="noContentMsg"></app-no-content>
+  <div *ngFor="let tournamentMatches of groupedTournamentMatches" class="tournament-matches__grouped">
+    <p class="tournament-matches__date">{{ tournamentMatches[0].date }}</p>
+    <div class="tournament-matches__group">
+      <app-tournament-match *ngFor="let match of tournamentMatches" [match]="match"></app-tournament-match>
+    </div>
   </div>
 </div>
