extend team module

--- a/src/app/styles/_form.scss
+++ b/src/app/styles/_form.scss
@@ -1,6 +1,6 @@
-@import '../../styles/variables';
+@import './variables';
 
-.tournament-form {
+.form {
   > div:nth-last-of-type(2) {
     margin-bottom: 1rem;
   }
