--- a/src/app/tournament/tournament-form/tournament-form.component.html
+++ b/src/app/tournament/tournament-form/tournament-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()" class="tournament-form">
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="tournament-form form">
   <div class="form-field">
     <label for="tournamentName">Tournament access</label>
     <mat-radio-group class="d-flex f-dir-col" aria-label="Select an option" formControlName="accessId">
@@ -182,7 +182,7 @@
       </mat-error>
     </mat-form-field>
   </div>
-  <div class="tournament-form__submit-container">
+  <div class="form__submit-container">
     <button mat-raised-button color="default" (click)="onCancel()" type="button">Cancel</button>
     <button mat-raised-button color="primary">Save</button>
   </div>
