--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-tournament-card
   *ngFor="let tournament of tournaments"
   [tournament]="tournament"
-  [routerLink]="['/tournament', tournament.id, 'view', 'general']"
+  [routerLink]="['/tournament', tournament.id]"
 ></app-tournament-card>
