--- a/src/app/tournament/components/view-tournament/view-tournament.component.html
+++ b/src/app/tournament/components/view-tournament/view-tournament.component.html
@@ -1,4 +1,8 @@
-<nav mat-tab-nav-bar class="nav">
+<nav
+  *ngIf="activeLink != 'edit'"
+  mat-tab-nav-bar
+  class="nav"
+>
   <a
     *ngFor="let navItem of navItems"
     mat-tab-link
