--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -1,6 +1,7 @@
 <div class="tournament content-indent">
   <app-page-header title="Create new tournament"></app-page-header>
   <app-tournament-form
+    #tournamentForm
     [tournament]="tournament"
     (onEditCancel)="onEditCancel()"
     (onFormSubmit)="onSubmit($event)"
