add team edit page and abstract sub navs in a base class

--- a/src/app/tournament/components/general/general.component.html
+++ b/src/app/tournament/components/general/general.component.html
@@ -1,4 +1,4 @@
-<div class="content-indent general">
+<div class="general">
   <div class="general__header d-flex jc-between">
     <app-page-header [title]="tournament.name"></app-page-header>
     <button
