--- a/src/app/tournament/components/tournament-groups/tournament-groups.component.html
+++ b/src/app/tournament/components/tournament-groups/tournament-groups.component.html
@@ -1,4 +1,4 @@
-<div class="tournament-matches content-indent">
+<div class="tournament-matches">
   <div *ngFor="let tournamentMatches of groupedTournamentMatches" class="tournament-matches__grouped">
     <p class="tournament-matches__date">{{ tournamentMatches[0].date }}</p>
     <div class="tournament-matches__group">
