--- a/src/app/tournament/components/tournament-table/tournament-table.component.html
+++ b/src/app/tournament/components/tournament-table/tournament-table.component.html
@@ -1,4 +1,4 @@
-<div class="tournament-table content-indent">
+<div class="tournament-table">
   <app-elimination-table *ngIf="tournament.typeId == tournamentTypes.elimination"></app-elimination-table>
   <app-classic-table *ngIf="tournament.typeId == tournamentTypes.classic"></app-classic-table>
   <app-round-robin-table
