--- a/src/app/tournament/components/view-tournament/view-tournament.component.html
+++ b/src/app/tournament/components/view-tournament/view-tournament.component.html
@@ -13,4 +13,6 @@
     <mat-icon>{{ navItem.icon }}</mat-icon>
   </a>
 </nav>
-<router-outlet></router-outlet>
+<div class="content-indent">
+  <router-outlet></router-outlet>
+</div>
