--- a/src/app/team/components/view-team/view-team.component.html
+++ b/src/app/team/components/view-team/view-team.component.html
@@ -1,4 +1,8 @@
-<nav mat-tab-nav-bar class="nav">
+<nav
+  mat-tab-nav-bar
+  class="nav"
+  *ngIf="activeLink != 'edit'"
+>
   <a
     *ngFor="let navItem of navItems"
     mat-tab-link
@@ -9,4 +13,6 @@
     <mat-icon>{{ navItem.icon }}</mat-icon>
   </a>
 </nav>
-<router-outlet></router-outlet>
+<div class="content-indent">
+  <router-outlet></router-outlet>
+</div>
