--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,8 +20,8 @@
           </mat-form-field>
         </div>
         <div class="login__submit-container">
-          <button routerLink="/register" mat-raised-button color="default">Register</button>
-          <button mat-raised-button color="primary">Login</button>
+          <a routerLink="/register" mat-raised-button color="default">Register</a>
+          <button mat-raised-button color="primary" type="submit">Login</button>
         </div>
       </form>
     </mat-card-content>
