--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,11 @@ button {
   text-transform: capitalize;
 }
 
+mat-divider.mat-divider {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 mat-option {
   text-transform: capitalize;
 }
