--- a/src/app/shared/tournament-match/tournament-match.component.html
+++ b/src/app/shared/tournament-match/tournament-match.component.html
@@ -1,7 +1,12 @@
 <mat-card class="tournament-match">
   <mat-card-title>
     <div class="tournament-match__result">
-      {{ match.homeTeam.name }} <span class="tournament-match__result--indent">? - ?</span> {{ match.awayTeam.name }}
+      {{ match.homeTeam.name }}
+      <span class="tournament-match__result--indent">
+        <span *ngIf="match.result; else noResult">{{ match.result }}</span>
+        <ng-template #noResult><span>? - ?</span></ng-template>
+      </span>
+      {{ match.awayTeam.name }}
     </div>
   </mat-card-title>
   <mat-card-content class="tournament-match__content">
@@ -17,4 +22,46 @@
       </button>
     </div>
   </mat-card-content>
+  <mat-card-footer *ngIf="canEdit" class="tournament-match__footer">
+    <div class="tournament-match__footer--divider">
+      <mat-divider></mat-divider>
+    </div>
+    <div class="tournament-match__actions">
+      <form [formGroup]="scoreForm" class="tournament-match__enter-results">
+        <div>
+          <mat-form-field floatLabel="always">
+            <button mat-icon-button matPrefix (click)="decrementScore(scoreForm['controls'].homeTeamScore)" [attr.aria-label]="'Decrement'">
+              <mat-icon>remove</mat-icon>
+            </button>
+            <input matInput formControlName="homeTeamScore" min="0" placeholder="Home" type="number" name="" autocomplete="off">
+            <button mat-icon-button matSuffix (click)="incrementScore(scoreForm['controls'].homeTeamScore)" [attr.aria-label]="'Increment'">
+              <mat-icon>add</mat-icon>
+            </button>
+            <mat-error *ngIf="isFieldInvalid('homeTeamScore')">
+              Score is required
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <span class="tournament-match__result--indent">:</span>
+        <div>
+          <mat-form-field floatLabel="always">
+            <button mat-icon-button matPrefix (click)="incrementScore(scoreForm['controls'].awayTeamScore)" [attr.aria-label]="'Increment'">
+              <mat-icon>add</mat-icon>
+            </button>
+            <input matInput formControlName="awayTeamScore" min="0" placeholder="Away" type="number" name="" autocomplete="off">
+            <button mat-icon-button matSuffix (click)="decrementScore(scoreForm['controls'].awayTeamScore)" [attr.aria-label]="'Decrement'">
+              <mat-icon>remove</mat-icon>
+            </button>
+            <mat-error *ngIf="isFieldInvalid('awayTeamScore')">
+              Score is required
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </form>
+      <button *ngIf="hasScore; else noScore" mat-raised-button type="button" color="accent" name="button" (click)="updateResults()">Update result</button>
+      <ng-template #noScore>
+        <button mat-raised-button type="button" color="accent" name="button" (click)="enterResults()">Enter result</button>
+      </ng-template>
+    </div>
+  </mat-card-footer>
 </mat-card>
