--- a/src/app/tournament/components/classic-table/classic-table.component.scss
+++ b/src/app/tournament/components/classic-table/classic-table.component.scss
@@ -1,3 +1,21 @@
+@import '../../../styles/variables';
+
+.elimination-phase {
+  margin-bottom: $bot-indent;
+}
+
 .group-table {
-  margin-bottom: 1rem;
+  margin-bottom: $bot-indent;
+}
+
+::ng-deep {
+  .elimination-phase {
+    .elimination-table {
+      padding: 1rem;
+      background: $color-white;
+      box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, .2),
+                  0px 3px 4px 0px rgb(0, 0, 0, .14),
+                  0px 1px 8px 0px rgb(0, 0, 0, .12)
+    }
+  }
 }
