--- a/src/app/tournament/components/tournament-form/tournament-form.component.html
+++ b/src/app/tournament/components/tournament-form/tournament-form.component.html
@@ -195,6 +195,6 @@
   </div>
   <div class="form__submit-container">
     <button mat-raised-button color="default" (click)="onCancel()" type="button">Cancel</button>
-    <button mat-raised-button color="primary">Save</button>
+    <button mat-raised-button color="primary" [disabled]="!form.valid">Save</button>
   </div>
 </form>
