--- a/src/app/profile/notifications/notifications.component.html
+++ b/src/app/profile/notifications/notifications.component.html
@@ -1,4 +1,5 @@
-<div *ngFor="let notification of notifications" class="notification">
+<app-notifications-list [notifications]="notifications"></app-notifications-list>
+<!-- <div *ngFor="let notification of notifications" class="notification">
   <mat-card class="notification-card mat-elevation-z">
     <mat-card-content class="notification-card__content">
       <div class="notification-card__body">
@@ -20,4 +21,4 @@
       </div>
     </mat-card-content>
   </mat-card>
-</div>
+</div> -->
