--- a/src/app/shared/player-form/player-form.component.html
+++ b/src/app/shared/player-form/player-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()" class="register">
+<form [formGroup]="form" class="register">
   <mat-form-field>
     <input [readonly]="isReadOnly" matInput type="text" placeholder="First Name" formControlName="firstName">
   </mat-form-field>
