--- a/src/app/tournament/components/tournament-groups/tournament-groups.component.html
+++ b/src/app/tournament/components/tournament-groups/tournament-groups.component.html
@@ -13,7 +13,7 @@
         (enterResult)="save($event)"
         (updateResult)="update($event)"
         [match]="match"
-        [canEditMatches]="tournament.canEditMatches"
+        [canEditMatches]="match.canEdit"
       ></app-tournament-match>
     </div>
   </div>
